@@ -1,0 +1,27 @@
+<?php
+
+namespace meteocontrol\client\vcomapi\model;
+
+class Session extends BaseModel {
+
+    /** @var User */
+    public $user;
+
+    /**
+     * @param array $data
+     * @param null|string $name
+     * @return $this
+     */
+    public static function deserialize(array $data, $name = null) {
+        $className = get_called_class();
+        $classInstance = new $className();
+        foreach ($data as $key => $value) {
+            if (is_array($value) && $key === "user") {
+                $classInstance->user = User::deserialize($value);
+            } elseif (property_exists($className, $key)) {
+                $classInstance->{$key} = self::getPhpValue($value);
+            }
+        }
+        return $classInstance;
+    }
+}
