@@ -1,0 +1,1 @@
+{"data":{"user":{"id":123,"title":"Mr.","firstName":"First Name","lastName":"Last Name","username":"user.name","email":"fake@mail.intra","language":"en","company":"Company","fax":"0234567890","telephone":"0234567891","cellphone":"0987654321","address":{"city":"City","country":"Country","postalCode":"12345","street":"Street 123","streetAddition":"2F-1"},"timezone":{"name":"Europe/Berlin","utcOffset":"+02:00"}}}}
