@@ -3,3 +3,4 @@
 2017-05-04: Add support for GZIP compression
 2017-05-16: Add description to ticket resource and update bulk example
 2017-05-18: Update tests
+2017-05-26: Add support for session resource
